--- a/saleappv2/eapp/templates/Layout/header.html
+++ b/saleappv2/eapp/templates/Layout/header.html
@@ -1,19 +1,38 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="javascript:void(0)">CELLPHONE S</a>
+        <a class="navbar-brand" href="/">CELLPHONE S</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="javascript:void(0)">Trang chủ</a>
+                    <a class="nav-link active" href="/">Trang chủ</a>
                 </li>
                 {% for c in categories %}
                 <li class="nav-item">
                     <a class="nav-link" href="/?category_id={{c.id}}">{{c.name}}</a>
                 </li>
                 {% endfor %}
+
+                {% if current_user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link text-warning" href="/">
+                        <img src="{{ current_user.avatar }}" class="rounded-circle" width="30" height="30">
+                        Chào {{ current_user.name }}!
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-warning" href="/logout">Đăng xuất</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link text-warning" href="/login">Đăng nhập</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-warning" href="/register">Đăng ký</a>
+                </li>
+                {% endif %}
             </ul>
             <form class="d-flex" method="get" action="/">
                 <input class="form-control me-2" type="text" placeholder="Nhập sản phẩm..." name="kw">
