--- a/saleappv2/eapp/templates/register.html
+++ b/saleappv2/eapp/templates/register.html
@@ -3,5 +3,5 @@
 {% block title %} ĐĂNG KÝ {% endblock %}
 
 {% block content %}
-<h1 class="text-success mt-2">Đăng ký người dùng</h1>
+<h1 class="text-success mt-2 text-center">Đăng ký người dùng</h1>
 {% endblock %}
