--- a/saleappv2/eapp/templates/login.html
+++ b/saleappv2/eapp/templates/login.html
@@ -3,5 +3,16 @@
 {% block title %} ĐĂNG NHẬP {% endblock %}
 
 {% block content %}
-<h1 class="text-success mt-2">Đăng nhập người dùng</h1>
+<h1 class="text-success mt-2 text-center">Đăng nhập người dùng</h1>
+<form method="post" action="/login?next=/">
+  <div class="form-group">
+    <label for="username">Tên đăng nhập:</label>
+    <input type="text" class="form-control" placeholder="Enter username" id="username" name="username">
+  </div>
+  <div class="form-group">
+    <label for="pwd">Password:</label>
+    <input type="password" class="form-control" placeholder="Enter password" id="pwd" name="password">
+  </div>
+  <button type="submit" class="btn btn-primary mt-2">ĐĂNG NHẬP</button>
+</form>
 {% endblock %}
