--- a/saleappv2/eapp/templates/Layout/base.html
+++ b/saleappv2/eapp/templates/Layout/base.html
@@ -24,6 +24,7 @@
 {% include 'layout/footer.html' %}
 {% endblock %}
 
-</body>
+<script src="{{ url_for('static', filename='js/main.js')}}"></script>
 
+</body>
 </html>
