--- a/saleappv2/eapp/templates/Layout/header.html
+++ b/saleappv2/eapp/templates/Layout/header.html
@@ -33,6 +33,9 @@
                     <a class="nav-link text-warning" href="/register">Đăng ký</a>
                 </li>
                 {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link text-warning" href="/cart">&#128169; <span class="badge bg-warning">0</span></a>
+                </li>
             </ul>
             <form class="d-flex" method="get" action="/">
                 <input class="form-control me-2" type="text" placeholder="Nhập sản phẩm..." name="kw">
