--- a/saleappv2/eapp/templates/index.html
+++ b/saleappv2/eapp/templates/index.html
@@ -13,7 +13,7 @@
                 <h4 class="card-title">{{p.name}}</h4>
                 <p class="card-text">{{p.price}} VNĐ</p>
                 <a href="#" class="btn btn-primary">Xem chi tiết</a>
-                <a href="#" class="btn btn-warning">Mua hàng</a>
+                <a href="#" class="btn btn-warning" onclick="addToCart({{ p.id }}, '{{ p.name }}', {{ p.price }})">Mua hàng</a>
             </div>
         </div>
     </div>
