--- a/saleappv2/eapp/templates/register.html
+++ b/saleappv2/eapp/templates/register.html
@@ -4,4 +4,32 @@
 
 {% block content %}
 <h1 class="text-success mt-2 text-center">Đăng ký người dùng</h1>
+
+{% if error_msg %}
+<div class="alert alert-danger">{{ error_msg }}</div>
+{% endif %}
+
+<form method="post" action="/register">
+    <div class="form-group">
+        <label for="name">Họ và tên:</label>
+        <input type="text" class="form-control" placeholder="Enter fullname" id="name" name="name">
+    </div>
+    <div class="form-group">
+        <label for="username">Tên đăng nhập:</label>
+        <input type="text" class="form-control" placeholder="Enter username" id="username" name="username">
+    </div>
+    <div class="form-group">
+        <label for="pwd">Mật khẩu:</label>
+        <input type="password" class="form-control" placeholder="Enter password" id="pwd" name="password">
+    </div>
+    <div class="form-group">
+        <label for="cfpwd">Xác nhận mật khẩu:</label>
+        <input type="password" class="form-control" placeholder="Confirm password" id="cfpwd" name="confirmpass">
+    </div>
+    <div class="form-group">
+        <label for="avatar">Chọn ảnh đại diện:</label>
+        <input type="file" class="form-control" id="avatar" name="avatar">
+    </div>
+    <button type="submit" class="btn btn-primary mt-2">ĐĂNG KÝ</button>
+</form>
 {% endblock %}
